--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "dotenv": "^8.2.0"
+  },
+  "devDependencies": {
+    "serverless": "^2.39.0",
+    "serverless-dotenv-plugin": "^3.9.0",
+    "serverless-offline": "^7.0.0"
   }
 }
