--- a/serverless.yml
+++ b/serverless.yml
@@ -22,6 +22,10 @@ frameworkVersion: '2'
 
 useDotenv: true
 
+plugins:
+  - serverless-offline
+  - serverless-dotenv-plugin
+
 provider:
   name: aws
   runtime: nodejs12.x
