--- a/serverless.yml
+++ b/serverless.yml
@@ -18,7 +18,7 @@ service: serverless-github
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
-frameworkVersion: '2'
+frameworkVersion: "3"
 
 useDotenv: true
 
@@ -28,7 +28,7 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs16.x
   lambdaHashingVersion: 20201221
 
 # you can overwrite defaults here
@@ -51,8 +51,8 @@ provider:
 #            - "Ref" : "ServerlessDeploymentBucket"
 #            - "/*"
 
-  # you can define service wide environment variables here
-  # environment:
+# you can define service wide environment variables here
+# environment:
 
 # you can add packaging information here
 #package:
